# routes/routes.go
@@ -1,9 +1,13 @@
 package routes
 
-import "github.com/gofiber/fiber/v2"
+import (
+	"authentication/middleware"
+
+	"github.com/gofiber/fiber/v2"
+)
 
 func SetupRoutes(app *fiber.App) {
-	api:=app.Group("/api")
+	api:=app.Group("/api/v1")
 	SetupAuthRoutes(api.Group("/auth"))
-	SetupBookRoutes(api.Group("/book"))
+	SetupBookRoutes(api.Group("/book",middleware.IsAuthenticated))
 }
